src/gwt/src/org/rstudio/studio/client/workbench/prefs/views/PreferencesDialog.css
@external gwt-CheckBox;

.preferencesDialog .gwt-CheckBox {
   display: block;
   margin-top: 8px;
}
.preferencesDialog .gwt-CheckBox.first {
   margin-top: 0;
}

.sectionChooser {
   background-color: white;
   border: 1px solid #999;
}

.sectionChooserInner {
   background-color: transparent;
   width: 100%;
}

.section {
   width: 100%;
   padding: 7px 0 5px 0;
}
.section * {
   cursor: default;
}

.activeSection {
   background: #D6E9F8;
}

.outer {
   width: 550px;
   height: 380px;
}

.indent {
   margin-left: 20px;
}

.textBoxWithButton input[type=text] {
   position: relative;
   top: 1px;
   height: 21px;
   border: 1px solid #999;
}

.paneLayoutTable td.paneLayoutTable {
   background-color: white;
   height: 135px;
   vertical-align: top;
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border-radius: 6px;
}

.paneLayoutTable .gwt-CheckBox {
   margin: 0 0 0 8px;
   font-size: 11px;
}

.paneLayoutTable select {
   width: 175px;
   margin-bottom: 8px;
}

